--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald&family=Titillium+Web:wght@200&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Yasin Arafat</title>
 </head>
+
 <body>
-    
+    <section class="headSection">
+        <div class="header">
+            <h2>Ya<span class="make-logo">s</span>in </h2>
+            <ul>
+                <li>Portfolio</li>
+                <li>Blog</li>
+                <li><a class="hierButton" target="_blank"
+                        href="https://www.linkedin.com/in/ys-yasin-b346271b7/">Hire</a></li>
+            </ul>
+
+        </div>
+        <div class="sectionContent">
+            <div class="aboutMe">
+                <h2>Hi, I am </h2>
+                <h1>Ys yasin Arafat</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia non quasi alias deserunt rem recusandae
+                    cumque consectetur aut a iure!</p>
+                <a class="hierButton2" target="_blank" href="https://www.linkedin.com/in/ys-yasin-b346271b7/">Hire</a>
+            </div>
+            <div class="myimg aboutMe">
+                <img src="images/hardy.png" alt="">
+            </div>
+        </div>
+
+
+
+    </section>
 </body>
+
 </html>
