--- a/index.html
+++ b/index.html
@@ -17,32 +17,98 @@
 
 <body>
     <section class="headSection">
-        <div class="header">
-            <h2>Ya<span class="make-logo">s</span>in </h2>
-            <ul>
-                <li>Portfolio</li>
-                <li>Blog</li>
-                <li><a class="hierButton" target="_blank"
-                        href="https://www.linkedin.com/in/ys-yasin-b346271b7/">Hire</a></li>
-            </ul>
+        <div class="headBody">
+            <div class="header">
+                <h2>Ya<span class="make-logo">s</span>in </h2>
+                <ul>
+                    <li>Portfolio</li>
+                    <li>Blog</li>
+                    <li><a class="hierButton" target="_blank"
+                            href="https://www.linkedin.com/in/ys-yasin-b346271b7/">Hire</a></li>
+                </ul>
 
-        </div>
-        <div class="sectionContent">
-            <div class="aboutMe">
-                <h2>Hi, I am </h2>
-                <h1>Ys yasin Arafat</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia non quasi alias deserunt rem recusandae
-                    cumque consectetur aut a iure!</p>
-                <a class="hierButton2" target="_blank" href="https://www.linkedin.com/in/ys-yasin-b346271b7/">Hire</a>
             </div>
-            <div class="myimg aboutMe">
-                <img src="images/hardy.png" alt="">
+            <div class="sectionContent">
+                <div class="aboutMe">
+                    <h2>Hi, I am </h2>
+                    <h1>Ys yasin Arafat</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia non quasi alias deserunt rem
+                        recusandae
+                        cumque consectetur aut a iure!</p>
+                    <a class="hierButton2" target="_blank"
+                        href="https://www.linkedin.com/in/ys-yasin-b346271b7/">Hire</a>
+                </div>
+                <div class="myimg aboutMe">
+                    <img src="images/hardy.png" alt="">
+                </div>
+            </div>
+
+
+
+    </section>
+
+    <section class="SecContent">
+
+        <h2>About Me</h2>
+        <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+            websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+            while working with me. Delivering work within time and budget which meets clients requirements in our
+            mata.</p>
+
+        <div class="contactSec">
+            <div class="abtItem">
+                <h3>Name</h3>
+                <span>yasin Arafat</span>
+            </div>
+            <div class="abtItem">
+                <h3>emain</h3>
+                <span>ys7.6@gmail.com</span>
+            </div>
+            <div class="abtItem">
+                <h3>spaciality</h3>
+                <span>web development</span>
+            </div>
+            <div class="abtItem">
+                <h3>address</h3>
+                <span>dhaka, Bangladesh</span>
             </div>
         </div>
 
 
 
     </section>
+
+    <section class="SecContent2">
+        <h1>what i do...</h1>
+        <div class="skill-cards">
+            <div class="cards">
+                <img src="images/icons/js.png" alt="">
+                <h3>Vanilla JavaScript</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, possimus vel. Consectetur, esse
+                    nostrum? Atque?</p>
+            </div>
+            <div class="cards">
+                <img src="images/icons/react.png" alt="react">
+                <h3>react</h3>
+                <p>Iusto minus hic perferendis laudantium deserunt nisi animi. Maiores accusamus ullam inventore vel
+                    repellat aspernatur.</p>
+            </div>
+            <div class="cards">
+                <img src="images/icons/mongo.png" alt="Mongodb">
+                <h3>Mongodb</h3>
+                <p>Repudiandae quo fugiat sapiente rerum maxime enim adipisci. Pariatur, accusamus molestiae sint neque
+                    cum ducimus.</p>
+            </div>
+            <div class="cards">
+                <img src="images/icons/nodejs.png" alt="Mongodb">
+                <h3>Mongodb</h3>
+                <p>Repudiandae quo fugiat sapiente rerum maxime enim adipisci. Pariatur, accusamus molestiae sint neque
+                    cum ducimus.</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
