third section added

--- a/index.html
+++ b/index.html
@@ -108,7 +108,63 @@
             </div>
         </div>
     </section>
-
+    <section class="SecContent2">
+        <h2>A summary of My Resume</h2>
+        <div class="main-box-sum">
+            <div class="sub-main">
+                <div class="box">
+                    <span>My education</span>
+                    <h2>Master in computer engineering</h2>
+                    <h3>harvard university /2015-2017</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, nostrum, aliquam ex rem
+                        excepturi alias et dolore harum, laboriosam aut ducimus. Exercitationem sint asperiores saepe?
+                    </p>
+                </div>
+                <div class="box">
+                    <span>My education</span>
+                    <h2>Master in computer engineering</h2>
+                    <h3>harvard university /2015-2017</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, nostrum, aliquam ex rem
+                        excepturi alias et dolore harum, laboriosam aut ducimus. Exercitationem sint asperiores saepe?
+                    </p>
+                </div>
+                <div class="box">
+                    <span>My education</span>
+                    <h2>Master in computer engineering</h2>
+                    <h3>harvard university /2015-2017</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, nostrum, aliquam ex rem
+                        excepturi alias et dolore harum, laboriosam aut ducimus. Exercitationem sint asperiores saepe?
+                    </p>
+                </div>
+            </div>
+            <div class="sub-main">
+                <div class="box"><span>My education</span>
+                    <h2>Master in computer engineering</h2>
+                    <h3>harvard university /2015-2017</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, nostrum, aliquam ex rem
+                        excepturi alias et dolore harum, laboriosam aut ducimus. Exercitationem sint asperiores saepe?
+                    </p>
+                </div>
+                <div class="box">
+                    <span>My education</span>
+                    <h2>Master in computer engineering</h2>
+                    <h3>harvard university /2015-2017</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, nostrum, aliquam ex rem
+                        excepturi alias et dolore harum, laboriosam aut ducimus. Exercitationem sint asperiores saepe?
+                    </p>
+                </div>
+                <div class="box">
+                    <span>My education</span>
+                    <h2>Master in computer engineering</h2>
+                    <h3>harvard university /2015-2017</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, nostrum, aliquam ex rem
+                        excepturi alias et dolore harum, laboriosam aut ducimus. Exercitationem sint asperiores saepe?
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="cv-button-div"><a href="https://www.linkedin.com/in/ys-yasin-b346271b7/">Download CV</a></div>
+    </section>
 </body>
 
 </html>
