--- a/index.html
+++ b/index.html
@@ -165,6 +165,32 @@
         </div>
         <div class="cv-button-div"><a href="https://www.linkedin.com/in/ys-yasin-b346271b7/">Download CV</a></div>
     </section>
+
+
+    <section class="SecContent3">
+        <div class="connectArea">
+            <h2>Let's Connect</h2>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                Monday through Friday.</p>
+            <ul>
+                <li><img src="images/icons/facebook.png" alt="Facebook Icon"></li>
+                <li><img src="images/icons/insta.png" alt="insta gram icon"></li>
+                <li><img src="images/icons/twitter.png" alt=""></li>
+            </ul>
+        </div>
+        <div class="form">
+            <h2>Let's Message me</h2>
+            <form class="form-layout" action="images/">
+                <label for="Name"> write you'r Name</label>
+                <input type="text" name="Name" id="Name" placeholder="you'r full name">
+                <label for="email"> write an email</label>
+                <input type="email" name="email" id="email">
+                <label for="comment">write you'r comment</label>
+                <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+                <input type="submit" value="submit">
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
